@@ -6,7 +6,7 @@ Last-Update: 2019-12-30
 
 --- a/src/ecdsa/test_pyecdsa.py
 +++ b/src/ecdsa/test_pyecdsa.py
-@@ -53,6 +53,11 @@
+@@ -55,6 +55,11 @@
  
  
  class ECDSA(unittest.TestCase):
@@ -18,7 +18,7 @@ Last-Update: 2019-12-30
      def test_basic(self):
          priv = SigningKey.generate()
          pub = priv.get_verifying_key()
-@@ -952,6 +957,10 @@
+@@ -957,6 +962,10 @@
  
  
  class DER(unittest.TestCase):
@@ -29,7 +29,7 @@ Last-Update: 2019-12-30
      def test_integer(self):
          self.assertEqual(der.encode_integer(0), b("\x02\x01\x00"))
          self.assertEqual(der.encode_integer(1), b("\x02\x01\x01"))
-@@ -1013,6 +1022,11 @@
+@@ -1018,6 +1027,11 @@
  
  
  class Util(unittest.TestCase):
@@ -41,7 +41,7 @@ Last-Update: 2019-12-30
      def test_trytryagain(self):
          tta = util.randrange_from_seed__trytryagain
          for i in range(1000):
-@@ -1053,6 +1067,9 @@
+@@ -1058,6 +1072,9 @@
  
  
  class RFC6979(unittest.TestCase):
@@ -51,8 +51,8 @@ Last-Update: 2019-12-30
      # https://tools.ietf.org/html/rfc6979#appendix-A.1
      def _do(self, generator, secexp, hsh, hash_func, expected):
          actual = rfc6979.generate_k(generator.order(), secexp, hash_func, hsh)
-@@ -1190,6 +1207,10 @@
-             expected=int("16200813020EC986863BEDFC1B121F605C1215645018AEA1A7B215A564DE9EB1B38A67AA1128B80CE391C4FB71187654AAA3431027BFC7F395766CA988C964DC56D", 16))
+@@ -1196,6 +1213,10 @@
+ 
  
  class ECDH(unittest.TestCase):
 +    def tearDown(self):
